# socket_tcp_project

./: CMakeLists.txt  README.md
src/console_client/: main.cpp
src/display_server/: main.cpp
src/net/: Socket.cpp  Socket.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
src/processing/: TextProcessor.cpp  TextProcessor.hpp
src/processing_server/: main.cpp
tests/: Socket_test.cpp  TcpClient_test.cpp  TcpServer_test.cpp  TextProcessor_test.cpp
